change from local to published ripplewarpwallet package

--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "progress": "^2.0.0",
     "qrcode": "^1.2.0",
     "ripple-lib": "^0.18.1",
-    "ripplewarpwallet": "../ripplewarpwallet/"
+    "ripplewarpwallet": "^1.0.4"
   }
 }
